# DEF-W9-14_DMS2F-HAD

./: PRD.md  README.md  TASKS.md  pyproject.toml
src/dms2f_had/: __init__.py  cli.py  config.py  data.py  masking.py  mixers.py  model.py  patches.py  trainer.py
tests/: test_smoke.py
