[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dms2f-had-module"
version = "0.1.0"
description = "ANIMA defense module baseline for DMS2F-HAD hyperspectral anomaly detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "torch>=2.2",
  "scikit-learn>=1.3",
  "h5py>=3.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
dms2f-had = "dms2f_had.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
